<resources>
    <string name="app_name">Ваше Здоровье</string>
    <string name="admin_email" translatable="false">admin@vzpharm.com.ua</string>

    <string name="hint_name">Name</string>
    <string name="hint_position">Position</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_email">Email address</string>
    <string name="hint_ok">OK</string>
    <string name="hint_cancel">CANCEL</string>
    <string name="hint_remove">REMOVE</string>
    <string name="hint_signin">Sign In</string>
    <string name="hint_restore">RESTORE</string>
    <string name="hint_description">Description</string>
    <string name="hint_send_email">Send email</string>

    <string name="menu_add_contact">Add contact</string>
    <string name="menu_edit_contact">Edit contact</string>
    <string name="menu_remove_contact">Remove contact</string>
    <string name="confirm_remove_contact">Do you want remove contact?</string>
    <string name="menu_list_users">List users</string>
    <string name="menu_options">Options</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_search">Search</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>

    <string name="title_edit_user">Edit user</string>
    <string name="title_add_user">Add new user</string>

    <string name="mes_saved">Saved</string>
    <string name="mes_no_records">No records in the base</string>
    <string name="mes_user_removed">User has been removed</string>
    <string name="mes_hello">Hello</string>
    <string name="mes_no_internet">No internet connection!</string>
    <string name="mes_register_admin_account">Admin account is not registered!</string>
    <string name="mes_user_not_founded">User not founded. Please contact to administrator of this program</string>
    <string name="mes_about">Corporate phone book</string>
    <string name="mes_succes_auth">Authentication successful</string>
    <string name="mes_error_auth">Error authentication. Try again</string>
    <string name="mes_company">Vashe Zdorovie</string>
    <string name="mes_empty">Not found</string>
    <string name="about_user">Current user</string>
    <string name="mes_help">You can sign in only after administrator add your email in white list of users.\n
        Please send your email account  to system administrator of you company.</string>
    <string name="mes_contact_removed">Contact %1$s removed</string>

    <string name="mes_email_already_exist">Email %1$s already exists</string>
    <string name="mes_user_added">User %1$s added</string>
    <string name="mes_email_incorrect">Value EMAIL is incorrect</string>
    <string name="mes_permission_call_not_granded">Permission for call not granded</string>

    <string name="email_add_user_body">Please add my email to white list of user of company.
        Below my name and position in company</string>
    <string name="email_add_user_theme">Request from new user</string>

    <string name="pref_detect_calls">Detect incoming calls</string>

    <string name="action_settings">Open settings</string>

</resources>
