<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/ab_search"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_search_category_default"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <group
        android:id="@+id/groupAdmin"
        android:visible="true">
        <item
            android:id="@+id/ab_add"
            android:title="@string/menu_add_contact"
            app:showAsAction="never" />

        <item
            android:id="@+id/ab_users"
            android:title="@string/menu_list_users"
            app:showAsAction="never" />

    </group>

    <item android:id="@+id/ab_options"
        android:title="@string/menu_options"
        android:checkable="false" />

    <item android:id="@+id/ab_sign_out"
        android:title="@string/menu_sign_out"
        android:checkable="false" />

    <item android:id="@+id/ab_about"
        android:title="@string/menu_about"
        android:checkable="false" />

</menu>