<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ab_share_item"
        app:showAsAction="ifRoom"
        android:title="@string/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider" />


    <item android:id="@+id/ab_options"
        android:title="@string/menu_options"
        android:checkable="false" />

    <group
        android:id="@+id/groupAdmin"
        android:visible="true">
        <item
            android:id="@+id/ab_add"
            android:title="@string/menu_add_contact"
            app:showAsAction="never" />

        <item
            android:id="@+id/ab_edit"
            android:title="@string/menu_edit_contact"
            app:showAsAction="never" />

        <item
            android:id="@+id/ab_remove"
            android:title="@string/menu_remove_contact"
            app:showAsAction="never" />

    </group>

</menu>